# mailing_app

./: .env_sample  .gitignore  pyproject.toml
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  urls.py  views.py
mailing/management/commands/: send_mailing.py
mailing/migrations/: 0001_initial.py  0002_alter_mailingattempt_options_alter_mailing_end_time_and_more.py  0003_alter_client_options_alter_mailing_options_and_more.py  0004_alter_client_options_alter_mailing_options_and_more.py  0005_mailingattempt_recipient.py
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_form.html  client_list.html  index.html  mailing_attempts.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_form.html  message_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: create_managers_group.py  csu.py
users/migrations/: 0001_initial.py  0002_user_country.py  0003_user_token.py  0004_alter_user_token.py  0005_user_image.py  0006_remove_user_image.py  0007_user_image.py
users/templates/: login.html
users/templates/users/: profile.html  profile_edit.html  user_form.html
