[tool.poetry]
name = "course7"
version = "0.1.0"
description = ""
authors = ["Danil Samusev <samusevdanil@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.6"
python-dotenv = "^1.1.1"
psycopg2-binary = "^2.9.10"
ipython = "^9.6.0"
redis = "^6.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
